fix: fix android header spacing

--- a/web-application/client/components/header/Header.css
+++ b/web-application/client/components/header/Header.css
@@ -22,7 +22,7 @@ header {
     padding-top: 60px;
 }
 .android header {
-    padding-top: 40px;
+    padding-top: 50px;
 }
 
 
